--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1,h2,h3,p{
     padding: lem 2em;
     margin: 2em;
     color: #fff;
+    background-color: #333;
     text-decoration: none;
 }
 
@@ -53,6 +54,55 @@ h1,h2,h3,p{
 }
 
 #bbbb .bg{
-    background: url(/)
+    background: url(/4.jpg);
+    background-position: center;
+    background-repeat: no;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    z-index:-1;
 
+}
+
+#skill {
+    background-color: #fff;
+    color: #333;
+    padding-bottom: 2em;
+
+}
+.content-wrap{
+    padding: 0 1.5em;
+}
+
+#service {
+    padding: 1em;
+}
+
+.card-content {
+    padding: lem;
+}
+
+#promise {
+    background-color: #fff;
+    color: #333;
+    padding: 2em;
+}
+
+#contact  .bot:first-child{
+    background: #2690d4;
+}
+
+#contact .bot{
+    padding: lem;
+}
+
+
+footer {
+    background-color: #000;
+    padding: 2em;
+}
+
+footer a{
+    text-decoration: none;
+    color: #2690d4;
 }
