--- a/style.css
+++ b/style.css
@@ -106,3 +106,32 @@ footer a{
     text-decoration: none;
     color: #2690d4;
 }
+
+@media (min-width:700px){
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr
+        repeat(2, minmax(auto, 25em))
+        1fr;
+    }
+    .content-wrap,
+    #service ul {
+        grid-column: 2/4;
+    }
+
+    .bot,
+    footer div {
+        grid-column: span 2;
+
+    }
+
+    #service ul {
+        display: flex;
+        justify-content: space-around;
+    
+    }
+
+    #service li {
+        width: 30%;
+    }
+}
