--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    font-family: Microsoft JhengHei;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.1.rem;
     color: #fff;
      background: #333;
@@ -24,19 +24,19 @@ img {
 #service li {
     color: #333;
     background: #fff;
-    margin: lem 0;
+    margin: 1em 0;
 }
 
 h1,h2,h3,p{
     margin: 0;
-    padding: lem 0;
+    padding: 1em 0;
 
 }
 
 .btn {
     display: inline-block;
     border: 1px #666 solid;
-    padding: lem 2em;
+    padding: 1em 2em;
     margin: 2em;
     color: #fff;
     background-color: #333;
@@ -54,6 +54,7 @@ h1,h2,h3,p{
 }
 
 #bbbb .bg{
+    position: absolute;
     background: url(/4.jpg);
     background-position: center;
     background-repeat: no;
@@ -75,25 +76,25 @@ h1,h2,h3,p{
 }
 
 #service {
-    padding: 1em;
+    padding: 2em 1em 1em;
 }
 
 .card-content {
-    padding: lem;
+    padding: 1em;
 }
 
 #promise {
     background-color: #fff;
     color: #333;
-    padding: 2em;
+    padding: 2em 0;
 }
 
-#contact  .bot:first-child{
+#contact .box:first-child {
     background: #2690d4;
 }
 
 #contact .bot{
-    padding: lem;
+    padding: 1em;
 }
 
 
