--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1,h2,h3,p{
 
 #bbbb .bg{
     position: absolute;
-    background: url(/4.jpg);
+    background: url(4.jpg);
     background-position: center;
     background-repeat: no;
     background-size: cover;
@@ -121,7 +121,7 @@ footer a{
     }
 
     .box,
-    footer div {
+    footer section {
         grid-column: span 2;
 
     }
